insersion del logo en el comit

--- a/archivo.html
+++ b/archivo.html
@@ -11,7 +11,8 @@
     <h1>hola mundo</h1>
   </div>
   <div id="container">
-    <div id="cabecera">Hiper blog</div>
+    <div id="cabecera"> <img id="logo" src="imagenes/imagen.jpeg" />
+         Hiper blog</div>
     <div id="post">
       <h1>este es el titulo</h1>
 
