--- a/archivo.html
+++ b/archivo.html
@@ -10,6 +10,7 @@
   <div id="titulo">
     <h1>hola mundo</h1>
   </div>
+  <div><h3>esta es una prueba con tildes corazón</h3></div>
   <div id="container">
     <div id="cabecera"> <img id="logo" src="imagenes/imagen.jpeg" />
          Hiper blog</div>
